--- a/AdvancedAuto/MainWindow.xaml
+++ b/AdvancedAuto/MainWindow.xaml
@@ -29,20 +29,38 @@
                     <RowDefinition Height="0.4*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Text="Advanced Auto" Style="{StaticResource textAppName}"/>
+                <!--<TextBlock Text="Advanced Auto" Style="{StaticResource textAppName}"/>-->
             </Grid>
         </Border>
-        <Border Grid.Row="1">
+        <Border Grid.Row="1" Background="#ffffff">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="0.3*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
+                <Border Background="AliceBlue">
+                    <Grid>
+                        
+                    </Grid>
+                </Border>
+                <Border Grid.Column="1">
+                    <ScrollViewer x:Name="svListAuto">
+                        <WrapPanel x:Name="wpListAuto">
+                            <!--<Button Width="170" Height="100" Margin="10, 10, 10, 10"/>
+                            <Button Width="170" Height="100" Margin="10, 10, 10, 10"/>
+                            <Button Width="170" Height="100" Margin="10, 10, 10, 10"/>
+                            <Button Width="170" Height="100" Margin="10, 10, 10, 10"/>
+                            <Button Width="170" Height="100" Margin="10, 10, 10, 10"/>
+                            <Button Width="170" Height="100" Margin="10, 10, 10, 10"/>
+                            <Button Width="170" Height="100" Margin="10, 10, 10, 10"/>
+                            <Button Width="170" Height="100" Margin="10, 10, 10, 10"/>
+                            <Button Width="170" Height="100" Margin="10, 10, 10, 10"/>
+                            <Button Width="170" Height="100" Margin="10, 10, 10, 10"/>
+                            <Button Width="170" Height="100" Margin="10, 10, 10, 10"/>
+                            <Button Width="170" Height="100" Margin="10, 10, 10, 10"/>-->
+                        </WrapPanel>
+                    </ScrollViewer>
+                </Border>
             </Grid>
         </Border>
     </Grid>
