--- a/AdvancedAuto/App.xaml
+++ b/AdvancedAuto/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AdvancedAuto"
-             StartupUri="AuthWindow.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Style x:Key="titleText" TargetType="TextBlock">
             <Setter Property="FontSize" Value="36"/>
