--- a/AdvancedAuto/App.xaml
+++ b/AdvancedAuto/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AdvancedAuto"
-             StartupUri="MainWindow.xaml">
+             StartupUri="AuthWindow.xaml">
     <Application.Resources>
         <Style x:Key="titleText" TargetType="TextBlock">
             <Setter Property="FontSize" Value="36"/>
@@ -114,6 +114,19 @@
             <Setter Property="Foreground" Value="Gray"/>
             <Setter Property="VerticalAlignment" Value="Bottom"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
+        </Style>
+
+        <Style x:Key="textMenu" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="Gray"/>
+            <Setter Property="Margin" Value="10, 10, 10, 10"/>
+        </Style>
+
+        <Style x:Key="textDetName" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="Gray"/>
         </Style>
     </Application.Resources>
 </Application>
