--- a/AdvancedAuto/AuthWindow.xaml
+++ b/AdvancedAuto/AuthWindow.xaml
@@ -93,7 +93,7 @@
 
             <Border Background="#ffffff" Grid.Column="1" CornerRadius="0, 10, 10, 0">
 
-                <StackPanel>
+                <StackPanel VerticalAlignment="Center">
                     <TextBlock Text="Advanced Auto" Style="{StaticResource appName}"/>
                     <Border BorderThickness="1" BorderBrush="#acb0af" Margin="70 7" CornerRadius="5">
                         <Grid Margin="7 9">
